--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -596,7 +596,9 @@ jobs:
         LIB_PATH="${{ github.workspace }}"
         cat > CMakeLists.txt << EOF
         cmake_minimum_required(VERSION 3.15)
-        project(test_install)
+        project(test_install LANGUAGES CXX)
+        set(CMAKE_CXX_STANDARD 20)
+        set(CMAKE_CXX_STANDARD_REQUIRED ON)
         add_subdirectory(${LIB_PATH} super-modbus)
         add_executable(test_app test.cpp)
         target_link_libraries(test_app PRIVATE super-modbus-lib)
