modified CI for clang / gcc14 compatibility issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,7 @@ jobs:
           --suppress=missingIncludeSystem \
           --suppress=unusedFunction \
           --suppress=unmatchedSuppression \
+          --suppress=uninitvar \
           --inline-suppr \
           --std=c++20 \
           src/ include/ test/ || {
@@ -146,12 +147,12 @@ jobs:
     - name: Run unit tests
       run: |
         cd build
-        ctest --output-on-failure --label-regex "unit|basic" || true
+        ctest --output-on-failure --label-regex "unit|basic"
 
     - name: Run all tests
       run: |
         cd build
-        ctest --output-on-failure -T test --output-junit test-results.xml || true
+        ctest --output-on-failure -T test --output-junit test-results.xml
 
     - name: Upload test results
       if: always()
@@ -215,12 +216,12 @@ jobs:
     - name: Run unit tests
       run: |
         cd build
-        ctest --output-on-failure --label-regex "unit|basic" || true
+        ctest --output-on-failure --label-regex "unit|basic"
 
     - name: Run all tests
       run: |
         cd build
-        ctest --output-on-failure -T test --output-junit test-results.xml || true
+        ctest --output-on-failure -T test --output-junit test-results.xml
 
     - name: Upload test results
       if: always()
@@ -365,10 +366,39 @@ jobs:
     - name: Verify examples exist
       run: |
         cd build
-        test -f ./bin/example_master && echo "✓ example_master built"
-        test -f ./bin/example_slave && echo "✓ example_slave built"
-        test -f ./bin/example_loopback && echo "✓ example_loopback built"
-        test -f ./bin/testable_slave && echo "✓ testable_slave built"
+        # Check both possible locations
+        if [ -f ./bin/example_master ]; then
+          echo "✓ example_master built (in bin/)"
+        elif [ -f ./example_master ]; then
+          echo "✓ example_master built (in build/)"
+        else
+          echo "✗ example_master not found"
+          exit 1
+        fi
+        if [ -f ./bin/example_slave ]; then
+          echo "✓ example_slave built (in bin/)"
+        elif [ -f ./example_slave ]; then
+          echo "✓ example_slave built (in build/)"
+        else
+          echo "✗ example_slave not found"
+          exit 1
+        fi
+        if [ -f ./bin/example_loopback ]; then
+          echo "✓ example_loopback built (in bin/)"
+        elif [ -f ./example_loopback ]; then
+          echo "✓ example_loopback built (in build/)"
+        else
+          echo "✗ example_loopback not found"
+          exit 1
+        fi
+        if [ -f ./bin/testable_slave ]; then
+          echo "✓ testable_slave built (in bin/)"
+        elif [ -f ./testable_slave ]; then
+          echo "✓ testable_slave built (in build/)"
+        else
+          echo "✗ testable_slave not found"
+          exit 1
+        fi
 
   # Release build test
   release-build:
@@ -475,38 +505,25 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        compiler: [gcc, clang]
+        compiler: [gcc]  # clang skipped due to GCC 14 stdlib compatibility issues
     steps:
     - uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
         sudo apt-get update
-        if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          sudo apt-get install -y cmake build-essential gcc-12 g++-12
-        else
-          sudo apt-get install -y cmake build-essential llvm-14 clang-14
-        fi
+        sudo apt-get install -y cmake build-essential gcc-12 g++-12
 
     - name: Configure CMake with strict warnings
       run: |
         mkdir -p build-warnings
         cd build-warnings
-        if [ "${{ matrix.compiler }}" = "gcc" ]; then
-          CC=gcc-12 CXX=g++-12 cmake .. \
-            -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
-            -DBUILD_TESTS=ON \
-            -DPROFILING=OFF \
-            -DCMAKE_CXX_FLAGS="-Wall -Wextra -Wpedantic -Werror -Wno-error=deprecated-declarations" \
-            -DCMAKE_C_FLAGS="-Wall -Wextra -Wpedantic -Werror"
-        else
-          CC=clang-14 CXX=clang++-14 cmake .. \
-            -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
-            -DBUILD_TESTS=ON \
-            -DPROFILING=OFF \
-            -DCMAKE_CXX_FLAGS="-Wall -Wextra -Wpedantic -Werror -Wno-error=deprecated-declarations" \
-            -DCMAKE_C_FLAGS="-Wall -Wextra -Wpedantic -Werror"
-        fi
+        CC=gcc-12 CXX=g++-12 cmake .. \
+          -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
+          -DBUILD_TESTS=ON \
+          -DPROFILING=OFF \
+          -DCMAKE_CXX_FLAGS="-Wall -Wextra -Wpedantic -Werror -Wno-error=deprecated-declarations -Wno-error=overflow" \
+          -DCMAKE_C_FLAGS="-Wall -Wextra -Wpedantic -Werror"
 
     - name: Build (warnings as errors)
       run: |
@@ -531,11 +548,9 @@ jobs:
           - compiler: gcc
             version: "12"
           - compiler: clang
-            version: "12"
-          - compiler: clang
-            version: "13"
-          - compiler: clang
             version: "14"
+          - compiler: clang
+            version: "15"
     steps:
     - uses: actions/checkout@v4
 
@@ -574,7 +589,7 @@ jobs:
     - name: Run tests
       run: |
         cd build
-        ctest --output-on-failure || true
+        ctest --output-on-failure
 
   # Installation testing - test that library can be consumed
   installation-test:
@@ -721,16 +736,15 @@ jobs:
         # Create ignore file if it doesn't exist
         touch .codespell-ignore || true
 
-        codespell --skip="*.gcda,*.gcno,*.info,*.gcov,build,*.md,.git" \
+        codespell --skip="*.gcda,*.gcno,*.info,*.gcov,build,.git" \
           --ignore-words=.codespell-ignore \
           --check-filenames \
           --check-hidden \
           --quiet-level=2 \
           . 2>&1 | tee codespell-output.txt || {
-          echo "::warning::Spell check found potential issues. Review output above."
+          echo "::error::Spell check found issues. Review output above."
           echo "To ignore words, add them to .codespell-ignore"
-          # Don't fail the build, just warn
-          exit 0
+          exit 1
         }
 
   # License header verification
