--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,12 +34,13 @@ target_link_libraries(run_tests PRIVATE
 include(GoogleTest)
 gtest_discover_tests(run_tests)
 
-target_compile_options(run_tests PRIVATE --coverage -O0)
-target_link_libraries(run_tests PRIVATE --coverage)
-add_custom_target(coverage-clean ${PROJECT_NAME}-lib PRE_BUILD COMMAND find ${CMAKE_BINARY_DIR} -type f -name '*.gcda' -exec rm {} +)
-
 option(COVERAGE "Enable coverage reporting" OFF)
 if (COVERAGE)
+    # Only add coverage flags when coverage is explicitly enabled
+    target_compile_options(run_tests PRIVATE --coverage -O0)
+    target_link_libraries(run_tests PRIVATE --coverage)
+    add_custom_target(coverage-clean ${PROJECT_NAME}-lib PRE_BUILD COMMAND find ${CMAKE_BINARY_DIR} -type f -name '*.gcda' -exec rm {} +)
+
     include(AddCoverage)
     AddCoverage(${PROJECT_NAME}-lib)
     AddCoverage(run_tests)
