--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,7 @@ jobs:
 
     - name: Run cppcheck
       run: |
+        # Exclude third-party code (GoogleTest) and build artifacts
         # Use compile_commands.json if available, otherwise use include paths
         if [ -f build/compile_commands.json ]; then
           cppcheck --enable=all --error-exitcode=1 \
@@ -126,13 +127,21 @@ jobs:
             --suppress=unmatchedSuppression \
             --suppress=uninitvar \
             --suppress=ctuOneDefinitionRuleViolation \
+            --suppress=knownConditionTrueFalse \
+            --suppress=constParameter \
+            --suppress=unusedStructMember \
+            --suppress=unreadVariable \
+            --suppress=noExplicitConstructor \
             --inline-suppr \
-            --std=c++20 || {
+            --std=c++20 \
+            -i build/_deps \
+            -i build/googletest \
+            || {
             echo "cppcheck found issues"
             exit 1
           }
         else
-          # Fallback: manually specify include paths
+          # Fallback: manually specify include paths, exclude build directories
           cppcheck --enable=all --error-exitcode=1 \
             -I include/ \
             -I include/super_modbus/ \
@@ -142,9 +151,15 @@ jobs:
             --suppress=unmatchedSuppression \
             --suppress=uninitvar \
             --suppress=ctuOneDefinitionRuleViolation \
+            --suppress=knownConditionTrueFalse \
+            --suppress=constParameter \
+            --suppress=unusedStructMember \
+            --suppress=unreadVariable \
+            --suppress=noExplicitConstructor \
             --inline-suppr \
             --std=c++20 \
-            src/ include/ test/ || {
+            -i build/ \
+            src/ include/ test/ examples/ || {
             echo "cppcheck found issues"
             exit 1
           }
