--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -16,13 +16,7 @@ jobs:
     - name: Install clang-format
       run: |
         sudo apt-get update
-        # Install specific version to match local development (clang-format-14)
-        # This ensures consistent formatting across environments
-        sudo apt-get install -y clang-format-14 || sudo apt-get install -y clang-format
-        # Create symlink if needed
-        if ! command -v clang-format &> /dev/null; then
-          sudo ln -s /usr/bin/clang-format-14 /usr/bin/clang-format || true
-        fi
+        sudo apt-get install -y clang-format
         clang-format --version
 
     - name: Check code formatting
@@ -41,18 +35,11 @@ jobs:
           exit 0
         fi
 
-        # Use clang-format-14 explicitly, with fallback to clang-format
-        if command -v clang-format-14 &> /dev/null; then
-          FORMAT_CMD="clang-format-14"
-        else
-          FORMAT_CMD="clang-format"
-        fi
-
         FAILED_FILES=()
         while IFS= read -r file; do
           if [ -f "$file" ]; then
             # Use --style=file to explicitly use .clang-format in current directory
-            if ! $FORMAT_CMD --style=file --dry-run --Werror "$file" >/dev/null 2>&1; then
+            if ! clang-format --style=file --dry-run --Werror "$file" >/dev/null 2>&1; then
               FAILED_FILES+=("$file")
             fi
           fi
