FINALLY figured out the clang-format issues

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,12 @@
 FROM ubuntu:jammy
 RUN apt update -y
 RUN apt upgrade -y
-RUN apt install -y sudo vim cmake cppcheck lcov curl llvm clang clangd clang-tidy clang-format wget git build-essential bash-completion
+# Add LLVM repository for clang-format-18
+RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - \
+    && echo "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main" > /etc/apt/sources.list.d/llvm.list \
+    && apt update -y
+RUN apt install -y sudo vim cmake cppcheck lcov curl llvm clang clangd clang-tidy clang-format-18 wget git build-essential bash-completion \
+    && ln -sf /usr/bin/clang-format-18 /usr/bin/clang-format || true
 ARG USERNAME=coder
 ARG USER_UID=1001
 ARG USER_GID=$USER_UID
