--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,7 @@ jobs:
             --suppress=unusedStructMember \
             --suppress=unreadVariable \
             --suppress=noExplicitConstructor \
+            --suppress=unassignedVariable \
             --inline-suppr \
             --std=c++20 \
             -i build/_deps \
@@ -151,6 +152,7 @@ jobs:
             --suppress=unusedStructMember \
             --suppress=unreadVariable \
             --suppress=noExplicitConstructor \
+            --suppress=unassignedVariable \
             --inline-suppr \
             --std=c++20 \
             -i build/ \
